# TredO

./: .gitignore  pyproject.toml
backend/: __init__.py
backend/agents/: __init__.py  base.py  lifecycle.py  manager.py  protocol.py  registry.py
backend/ai/: __init__.py  gateway.py  models.py
backend/api/: __init__.py  app.py  lifespan.py  routes.py  schemas.py  websocket.py
backend/config/: __init__.py  settings.py
backend/core/: __init__.py  event_bus.py  messages.py  registry.py  scheduler.py
backend/exchange/: __init__.py  connector.py
backend/execution/: __init__.py  exchange_interface.py  models.py  order_service.py  paper_exchange.py  position_manager.py
backend/intelligence/: __init__.py  feature_store.py  models.py  pipeline.py  registry.py
backend/market/: __init__.py  cache.py  events.py  models.py  normalizer.py  scanner.py  subscriptions.py
backend/memory/: __init__.py  journal.py  models.py  schema.sql  storage.py
backend/replay/: __init__.py  clock.py  controller.py  models.py  sources.py
backend/risk/: __init__.py  engine.py  meta_rules.yaml
docs/: API_CONTRACT.md  ARCHITECTURE.md  CHANGELOG.md  EVENT_CATALOG.md  ROADMAP.md
electron-app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tests/: __init__.py  test_agents.py  test_ai.py  test_api.py  test_core.py  test_exchange.py  test_execution.py  test_intelligence.py  test_market.py  test_memory.py  test_pipeline.py  test_replay.py  test_risk.py  test_strategies.py  test_strategy_base.py  test_strategy_manager.py  test_volatility.py  test_volume.py
(+35 files in other folders)
